k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mathlinux-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mathlinux
  template:
    metadata:
      labels:
        app: mathlinux
    spec:
      containers:
      - name: mathlinux
        image: thomasgean/mathlinux:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
