k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathlinux-service
spec:
  selector:
    app: mathlinux
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
